--- a/Assignment3/src/application/Menu.fxml
+++ b/Assignment3/src/application/Menu.fxml
@@ -134,7 +134,7 @@
                               <Font name="DejaVu Sans ExtraLight" size="28.0" />
                            </font>
                         </Text>
-                        <MenuButton fx:id="menuButtonVoices" layoutX="26.0" layoutY="693.0" mnemonicParsing="false" text="Voices" textFill="#79b4d1">
+                        <MenuButton fx:id="menuButtonVoices" layoutX="26.0" layoutY="685.0" mnemonicParsing="false" prefWidth="179.0" text="Voices" textFill="#79b4d1">
                            <items>
                               <MenuItem fx:id="voice1" mnemonicParsing="false" onAction="#handleVoice1" text="Voice 1" />
                               <MenuItem fx:id="voice2" mnemonicParsing="false" onAction="#handleVoice2" text="Voice 2" />
@@ -144,7 +144,7 @@
                               <Font name="DejaVu Sans" size="24.0" />
                            </font>
                         </MenuButton>
-                        <MenuButton fx:id="buttonVoiceRate" layoutX="267.0" layoutY="693.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" text="0.75x" textFill="#79b4d1">
+                        <MenuButton fx:id="buttonVoiceRate" layoutX="268.0" layoutY="685.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefWidth="179.0" text="0.75x" textFill="#79b4d1">
                            <items>
                               <MenuItem mnemonicParsing="false" onAction="#handleSpeedOne" text="0.5x" />
                               <MenuItem mnemonicParsing="false" onAction="#handleSpeedTwo" text="0.75x" />
@@ -156,7 +156,7 @@
                               <Font name="DejaVu Sans" size="24.0" />
                            </font>
                         </MenuButton>
-                        <Button fx:id="buttonNext" layoutX="782.0" layoutY="693.0" mnemonicParsing="false" onAction="#handleButtonNext" text="Next: Select/Combine audio files">
+                        <Button fx:id="buttonNext" layoutX="733.0" layoutY="693.0" mnemonicParsing="false" onAction="#handleButtonNext" text="Next: Select/Combine audio files">
                            <font>
                               <Font name="Manjari Regular" size="24.0" />
                            </font>
@@ -182,7 +182,7 @@
                               <Font name="Manjari Regular" size="24.0" />
                            </font>
                         </Button>
-                        <Button layoutX="638.0" layoutY="693.0" mnemonicParsing="false" onAction="#handleButtonCombineNext" text="Next: Select number of images &amp; Create video">
+                        <Button layoutX="564.0" layoutY="693.0" mnemonicParsing="false" onAction="#handleButtonCombineNext" text="Next: Select number of images &amp; Create video">
                            <font>
                               <Font name="Manjari Regular" size="24.0" />
                            </font>
