--- a/Assignment3/src/application/application.css
+++ b/Assignment3/src/application/application.css
@@ -91,7 +91,7 @@
 }
 
 .cell:selected {
-	-fx-background-color: #303030;
+	-fx-background-color: #2B2B2B;
 	-fx-font-size: 18px;
     -fx-border-color: white;
     -fx-border-width: 0 0 1 0;
@@ -157,5 +157,53 @@
 	-fx-background-color: #4a4a4a;
     -fx-text-fill: white;
     -fx-font-size: 18px;
+    -fx-pref-width: 179;
+    -fx-border-width: 0 0 0 0;
+}
+
+.menu-item:hover .label {
+	-fx-background-color: #303030;
+	-fx-border-color: #303030;
+	-fx-border-width: 0 0 0 0;
+}
+
+.menu-item:focused .label {
+	-fx-background-color: #303030;
+	-fx-border-color: #303030;
+	-fx-border-width: 0 0 0 0;
+}
+
+.tab-pane {
+	-fx-background-color: #303030;
+    -fx-tab-min-width: 150px;
+}
+
+.tab-pane .tab-header-area .tab-header-background {
+    -fx-background-color: #6D6D6D;
+}
+
+.tab .tab-label { 
+    -fx-background-color: #909090;
+    -fx-font-size: 18px;
+    -fx-text-fill: white;
+}
+
+.tab:selected .tab-label { 
+    -fx-background-color: #303030;
+    -fx-text-fill: #79b4d1;
+}
+
+.tab-pane .tab {
+    -fx-background-color: #909090;
+
+}
+
+.tab-pane .tab:selected { 
+    -fx-background-color: #303030;
+    -fx-focus-color: transparent;
+}
+
+.tab{
+    -fx-background-insets: 0 1 0 1,0,0;
 }
 
